fixed horizontal scroll issue in account summary

--- a/src/app/create-task/account/account-summary/account-summary.component.scss
+++ b/src/app/create-task/account/account-summary/account-summary.component.scss
@@ -6,6 +6,7 @@
 
 .account-summary {
     font-size: 16px;
+    background-color: white;
 
     .details-and-actions {
         margin-top: 30px;
